fixed languages error and overflow in languages

--- a/style.css
+++ b/style.css
@@ -136,7 +136,8 @@ section.repository-list {
   width: 100%;
   background-color: rgba(255, 255, 255, 0.347);
   display: flex;
-  flex-wrap: wrap;
+  flex-wrap: nowrap;
+  overflow: hidden;
   gap: 0;
   justify-content: flex-start;
   align-items: center;
